--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+ /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,27 +10,77 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} */
-.navbar {
+}  */
+
+*{
+  text-align: center;
+}
+
+.navBar {
   padding: 20px;
   display: flex;
   align-items: center;
-  max-width: 600px;
+  /* max-width: 600px; */
   margin: 0 auto;
-  border-bottom: 1px solid #f2f2f2;
+  border: 1px solid #f25252;
+
 }
 
-.navbar h1 {
-  color: #f1356d;
-}
-.navbar .links {
+.navBar .links {
   margin-left: auto;
 }
-.navbar a {
+
+.navBar a {
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
+  /* background-color: #f25252; */
+  border-radius: 25px;
 }
-.navbar a:hover {
+.navBar a:hover {
   color: #f1356d;
+}
+
+
+.row {
+  border: #ff00ff;
+  border-style: solid;
+  border-width: 1px;
+  position: relative;
+  width: 300px;
+  margin: 0 auto;
+}
+
+.row label {
+  position: absolute;
+  right: 100%;
+  padding-right: 10px;
+  white-space: nowrap;
+}
+
+.row input,
+.row textarea {
+  width: 90%;
+}
+
+.eye{
+  position: absolute;
+  display: inline;
+  right: 10px;
+  width: 10%;
+}
+
+@font-face {
+  font-family: AbrilFatface-Regular;
+  src: url(./fonts/AbrilFatface-Regular.ttf);
+}
+
+.Title {
+  border: #ff00ff;
+  border-style: solid;
+  border-width: 5px;
+  /* color: #BEC5AD; */
+  color: #282c34;
+  font-size: 80px;
+  font-family: AbrilFatface-Regular;
 }
