--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
- /* body {
+ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,10 +10,11 @@
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}  */
+}
 
 *{
   text-align: center;
+  background-color: #024b45;
 }
 
 .navBar {
@@ -22,7 +23,7 @@ code {
   align-items: center;
   /* max-width: 600px; */
   margin: 0 auto;
-  border: 1px solid #f25252;
+  /* border: 1px solid #f25252; */
 
 }
 
@@ -34,18 +35,18 @@ code {
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
-  /* background-color: #f25252; */
+  color: #1a1c22;
   border-radius: 25px;
 }
 .navBar a:hover {
-  color: #f1356d;
+  color: #1a1c22;
 }
 
 
 .row {
-  border: #ff00ff;
+  /* border: #ff00ff;
   border-style: solid;
-  border-width: 1px;
+  border-width: 1px; */
   position: relative;
   width: 300px;
   margin: 0 auto;
@@ -61,6 +62,19 @@ code {
 .row input,
 .row textarea {
   width: 90%;
+  height: 25px;
+}
+
+.LoginBox a{
+  color: #1a1c22;
+}
+
+.LoginBox ::placeholder {
+  color: #1a1c22;
+  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
 }
 
 .eye{
@@ -76,11 +90,29 @@ code {
 }
 
 .Title {
-  border: #ff00ff;
+  /* border: #ff00ff; 
   border-style: solid;
-  border-width: 5px;
+  border-width: 5px;*/
   /* color: #BEC5AD; */
-  color: #282c34;
+  color: #1a1c22;
   font-size: 80px;
   font-family: AbrilFatface-Regular;
+}
+
+.about{
+  color: #1a1c22;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.h2{
+  font-size: 30px;
+}
+
+.TextField{
+  border: none;
+}
+
+.TextField :focus, input:focus{
+  outline: none;
 }
